<resources>
    <string name="app_name">Pianificatore</string>

    <string name="msg_no_task">Nessuna attività ancora in programma.</string>

    <string name="vuota"></string>

    <string name="desc">Inserisci la descrizione dell\'attività:</string>
    <string name="data">Inserisci la data in cui svolgere l\'attività:</string>
    <string name="ora">Inserisci l\'ora in cui svolgere l\'attività:</string>
    <string name="prior">Inserisci la priorità relativa all\'attività:</string>
    <string name="classe">Inserisci la classe di appartenenza dell\'attività:</string>
    <string name="button_data_form">Data</string>
    <string name="button_ora_form">Ora</string>
    <string name="button_prior_form">Priorità</string>
    <string name="button_classe_form">Classe</string>
    <string name="button_salva_form">Salva</string>

    <string name="info_desc">Descrizione:</string>
    <string name="info_dataora">Data e ora:</string>
    <string name="info_prior">Priorità:</string>
    <string name="info_classe">Classe:</string>
    <string name="info_stato">Stato:</string>

    <string name="button_mod_task">Modifica</string>
    <string name="button_elim_task">Elimina</string>
    <string name="button_compl_task">Completata!</string>

    <string name="title_home">Attività da svolgere</string>
    <string name="title_det_task">Dettagli dell\'attività selezionata</string>

    <string name="head_nav">Pianificatore</string>
    <string name="menu_nav_graf">Grafici</string>
    <string name="menu_nav_crono">Cronologia</string>
    <string name="menu_nav_credits">Informazioni sull\'app</string>

    <string name="imp_filter">Imposta filtri</string>
    <string name="add_filter_home">Aggiungi filtri alla visualizzazione</string>
    <string name="add_filter_notif">Aggiungi filtri alle notifiche</string>

    <string name="bottom_nav_bar">Mensile</string>
    <string name="bottom_nav_pie">Classi</string>

    <string name="credits_nome">Daniele Polidori</string>
    <string name="credits_email">daniele.polidori2@studio.unibo.it</string>
    <string name="credits__unibo">Alma Mater Studiorum - Università di Bologna</string>
    <string name="credits__informatica">Corso di Laurea triennale in Informatica</string>
    <string name="credits_lam">Corso di Laboratorio di applicazioni mobili\na.a. 2018/2019</string>

    <string name="channel_name">Notifiche Pianificatore</string>
    <string name="channel_description">Notifiche relative all\'app Pianificatore</string>

</resources>

